# linux-client-server-ipc

./: CMakeLists.txt  INSTRUCTIONS.md  README.md
bash/: test.sh
inc/: clients.h  server.h
src/: clients.c  server.c
